# math-problems

./: .gitignore  README.md  RENDER_DEPENDENCIES.md  aops_downloader.py  automated.py  install_sysdeps.sh  label_problems.py  pyproject.toml  renderer.py  update_files.py
libs/: olympiad.asy
tests/: test_downloader.py  test_renderer.py
