[project]
name = "math-problems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "pypandoc>=1.13",
    "pillow>=10",
    "mwparserfromhell>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
